# reyfetch

./: pyproject.toml
src/reyfetch/: rbrowser.py
src/reyfetch/ritem/: rali.py  rdouban.py
